traces/bug_57.txt
src/medit/critip.c:73: error: DEAD_STORE
  The value written to &dmin (type double) is never used.
Showing all 1 steps of the trace


src/medit/critip.c:73:3: Write of unused value
71.   
72.     dmin   = sc->dmax * EPS;
73.     dmin  *= dmin;
        ^
74.     ifilt  = 0;
75.     hsv[0] = sc->iso.col[0];
